# us-visa-predictor-ml-pipeline

./: .gitignore  Dockerfile  Makefile  README.md  compose.yaml  docker-compose_old.yml  dvc.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  run_all.sh  setup.py
.dvc/: config
.github/workflows/: ci-cd.yml
data/: raw.dvc
docs/: mkdocs.yml
docs/docs/: index.md
metrics/: best_model_classification_report.txt
mlflow/: Dockerfile
notebooks/: EDA_US_Visa.ipynb  Feature_Engineering.ipynb
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/config/: config.py
src/constants/: __init__.py
src/data_access/: usvisa_data.py
src/db/: db_connector.py
src/exception/: __init__.py
src/load_data/: create_schema.py  db_schema.sql
src/logger/: __init__.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
src/utils/: __init__.py
